--- a/.gitignore
+++ b/.gitignore
@@ -347,3 +347,8 @@ healthchecksdb
 
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 MigrationBackup/
+
+node_modules
+/constants/firebaseconfig.js
+/android/
+/ios/
